--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     body{
       background: #E1E1E1;
     }
+
+    .clearfix:after {
+      content: '';
+      display: block;
+      clear: both;
+    }
   </style>
 </head>
 <body>
