add user and post component

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       text-decoration: none;
       color: inherit;
     }
-    body{
+
+    body {
       background: #E1E1E1;
     }
 
@@ -31,6 +32,7 @@
 </head>
 <body>
 <div id="app"></div>
+<script src="//at.alicdn.com/t/font_793675_tbe0pdahqe9.js"></script>
 <!-- built files will be auto injected -->
 </body>
 </html>
